--- a/GEOVIZ-Viewer/src/assets/style.scss
+++ b/GEOVIZ-Viewer/src/assets/style.scss
@@ -1,3 +1,5 @@
+// from Cameron Beccario's Earth
+// https://github.com/cambecc/earth
 /**************************************************************************************************
  * At-Rules
  **************************************************************************************************/
@@ -83,7 +85,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  will-change: transform;
+/*  will-change: transform;*/
 }
 
 #sponsor {
