--- a/GEOVIZ-Viewer/src/assets/style.scss
+++ b/GEOVIZ-Viewer/src/assets/style.scss
@@ -35,46 +35,9 @@ svg {
 }
 
 /**************************************************************************************************
- * SVG Element Styling
+ * Nav Bar Styling
  **************************************************************************************************/
-
-.coastline, .lakes {
-  stroke: #ffffff;
-  stroke-width: 1.25;
-  fill: none;
-}
-
-.firefox .coastline, .firefox .lakes {
-  stroke-width: 1.0;
-}
-
-.graticule {
-  stroke: #505050;
-  stroke-width: 1.0;
-  fill: none;
-}
-
-.hemisphere {
-  stroke: #707070;
-  stroke-width: 1.25;
-  fill: none;
-}
-
-.background-sphere {
-  stroke: none;
-  fill: #303030;
-}
-
-.foreground-sphere {
-  stroke: #000005;
-  stroke-width: 4.0;
-  fill: none;
-  -moz-user-select: none;  /* Oddly, Win FF sometimes selects this SVG element. Disable. */
-  user-select: none;
-}
-
-.location-mark {
-  stroke: #3aff3a;
-  stroke-width: 2.5;
-  fill: none;
+.el-menu--horizontal .el-menu-item{
+  height: 42px;
+  line-height: 42px;
 }
